--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit
 TTS==0.10.3
-torch>=1.12.0
-torchaudio
+torch==1.12.1
+torchaudio==0.12.1
 numpy
-librosa
+librosa==0.9.2
 matplotlib
 Pillow
